package.xml について整備。不要なlwcフォルダを除去。

--- a/manifest/package.xml
+++ b/manifest/package.xml
@@ -1,7 +1,10 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
 <Package xmlns="http://soap.sforce.com/2006/04/metadata">
     <types>
-        <members>*</members>
+        <members>CharUtils</members>
+        <members>CharUtilsTest</members>
+        <members>StringUtils</members>
+        <members>StringUtilsTest</members>
         <name>ApexClass</name>
     </types>
     <version>55.0</version>
